src/test/deca/syntax/valid/created/logic-operator-equals.deca
{
    boolean b = a == 1;
}