src/test/deca/syntax/invalid/created/int-error.deca
{
    float a  = 1000000000;
    float b = 1000000000;
    float c= a*b;
}